fixed abous-us.css + common.css |  upper-title text-aligh + overflow-x: hidden

--- a/css/about-us.css
+++ b/css/about-us.css
@@ -8,10 +8,6 @@
 
 .about-us-container {
 	margin-top: 50px;
-	/*display: flex;
-	flex-direction: row;
-	justify-content: center;
-	align-items: center;*/
 }
 
 .about-us__background {
@@ -22,7 +18,6 @@
 .about-us {
 	height: 100%;
 	width: 100%;
-	
 }
 
 .about-us__subtitle {
@@ -33,7 +28,6 @@
 	color: white;
 	font-family: 'Lato', sans-serif;
 	text-align: left;
-
 }
 
 .accordion-item {
@@ -58,7 +52,6 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
-	/*background-color: rgb(134, 187, 70);*/
 	margin: 110px auto;
 	padding: 0 20px;
 }
@@ -82,13 +75,10 @@
 		justify-content: center;
 		padding: 120px 40px 30px;
 		overflow-x: auto;
-	
-}
-}
-.about-us__title {
-	text-align: left;
+	}
 }
 
+.about-us__title,
 .about-us__up-title {
 	text-align: left;
 }
@@ -107,81 +97,32 @@
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
-	
-}
-.about-us-bottom__button {
-	margin: 0px;
-	padding: 10px 20px;
-	max-width: 130px;
-}
+
+	}
+
+	.about-us-bottom__button {
+		margin: 0px;
+		padding: 10px 20px;
+		max-width: 130px;
+	}
 }
 
 @media (min-width: 960px) {
-.about-us-bottom {
-	display: flex;
-	flex-direction: row;
-	justify-content: center;
-	align-items: center;
-	margin-top: -120px;
-	margin-bottom: -70px;
-
-
-}
-.about-us-bottom__button {
-margin: 0px;
-padding: 10px 20px;
-max-width: 130px;
-}
-.about-us-container {
-	margin-top: 0px;
-	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
-	align-items: center;
-}
-.about-us__background {
-	position: relative;
-	z-index: 2;
-        height: 520px;
-        object-fit: none;
-        object-position: 95% 50%;
-
-}
-.upper-title {
-	text-align: left;
-}
-.about-us{
-	z-index: 8;
-	background-color: white;
-	padding-left: 25px;
-
-}
-.about-us-bottom2 {
-	display:flex;
-	flex-direction: column;
-	max-width: 670px;
-	margin-left: -70px;
-	
-
-}
-
-}
-@media (min-width: 1350px) {
 	.about-us-bottom {
 		display: flex;
 		flex-direction: row;
 		justify-content: center;
 		align-items: center;
-		margin-top: -180px;
-		margin-bottom: -100px;
-	
-	
+		margin-top: -120px;
+		margin-bottom: -70px;
 	}
+
 	.about-us-bottom__button {
-	margin: 0px;
-	padding: 10px 20px;
-	max-width: 130px;
+		margin: 0px;
+		padding: 10px 20px;
+		max-width: 130px;
 	}
+
 	.about-us-container {
 		margin-top: 0px;
 		display: flex;
@@ -189,36 +130,81 @@ max-width: 130px;
 		justify-content: space-between;
 		align-items: center;
 	}
+
 	.about-us__background {
 		position: relative;
 		z-index: 2;
-			height: 520px;
-			object-fit: none;
-			object-position: 95% 50%;
-	
+		height: 520px;
+		object-fit: none;
+		object-position: 95% 50%;
 	}
-	.upper-title {
-		text-align: left;
-	}
-	.about-us{
+
+	.about-us {
 		z-index: 8;
 		background-color: white;
 		padding-left: 25px;
-	
 	}
+
 	.about-us-bottom2 {
-		display:flex;
+		display: flex;
+		flex-direction: column;
+		max-width: 670px;
+		margin-left: -70px;
+	}
+
+}
+
+@media (min-width: 1350px) {
+
+	.about-us-bottom {
+		display: flex;
+		flex-direction: row;
+		justify-content: center;
+		align-items: center;
+		margin-top: -180px;
+		margin-bottom: -100px;
+	}
+
+	.about-us-bottom__button {
+		margin: 0px;
+		padding: 10px 20px;
+		max-width: 130px;
+	}
+
+	.about-us-container {
+		margin-top: 0px;
+		display: flex;
+		flex-direction: row;
+		justify-content: space-between;
+		align-items: center;
+	}
+
+	.about-us__background {
+		position: relative;
+		z-index: 2;
+		height: 520px;
+		object-fit: none;
+		object-position: 95% 50%;
+	}
+
+	.about-us {
+		z-index: 8;
+		background-color: white;
+		padding-left: 25px;
+	}
+
+	.about-us-bottom2 {
+		display: flex;
 		flex-direction: column;
 		max-width: 670px;
 		margin-left: -120px;
 		margin-right: 350px;
-		
-	
 	}
-	
+
 }
 
-@media (min-width: 1920px) {
+@media (min-width: 1910px) {
+
 	.about-us-bottom {
 		display: flex;
 		flex-direction: row;
@@ -226,14 +212,14 @@ max-width: 130px;
 		align-items: center;
 		margin-top: -180px;
 		margin-bottom: -100px;
-	
-	
 	}
+
 	.about-us-bottom__button {
-	margin: 0px;
-	padding: 10px 20px;
-	max-width: 130px;
+		margin: 0px;
+		padding: 10px 20px;
+		max-width: 130px;
 	}
+
 	.about-us-container {
 		margin-top: 0px;
 		display: flex;
@@ -241,31 +227,28 @@ max-width: 130px;
 		justify-content: space-between;
 		align-items: center;
 	}
+
 	.about-us__background {
 		position: relative;
 		z-index: 2;
-			height: 520px;
-			object-fit: none;
-			object-position: 95% 50%;
-	
+		height: 520px;
+		object-fit: none;
+		object-position: 95% 50%;
 	}
-	.upper-title {
-		text-align: left;
-	}
-	.about-us{
+
+	.about-us {
 		z-index: 8;
 		background-color: white;
 		padding-left: 100px;
 		max-width: 900px;
 		padding-right: 200px;
 	}
+
 	.about-us-bottom2 {
-		display:flex;
+		display: flex;
 		flex-direction: column;
 		max-width: 670px;
 		margin-left: -120px;
 		margin-right: 350px;
-		
-	
 	}
 }
