--- a/css/common.css
+++ b/css/common.css
@@ -73,15 +73,13 @@
 .container {
 	max-width: 1920px;
 	margin: auto;
-	/*overflow-x: hidden;*/
-	overflow-x: scroll;
+	overflow-x: hidden;
 }
 
 * {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-
 }
 
 :root {
